5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3113/executions/1594_1804.log
== TEST (2019-04-01 18:43:15) 
-- CODE:
xa=float(input(""))
xb=float(input(""))
ya=float(input(""))
yb=float(input(""))

dab=sqrt((xb-xa)**2+(yb-ya)**2)

print(round(dab,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    dab=sqrt((xb-xa)**2+(yb-ya)**2)
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:43:32) 
-- CODE:
from math import*
xa=float(input(""))
xb=float(input(""))
ya=float(input(""))
yb=float(input(""))

dab=sqrt((xb-xa)**2+(yb-ya)**2)

print(round(dab,3))
-- OUTPUT:
30.806
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:44:14) 
-- CODE:
from math import*
xa=float(input(""))
xb=float(input(""))
ya=float(input(""))
yb=float(input(""))

dab=sqrt((xb-xa)**2)+sqrt((yb-ya)**2)

print(round(dab,3))
-- OUTPUT:
43.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:44:28) 
-- CODE:
from math import*
xa=float(input(""))
xb=float(input(""))
ya=float(input(""))
yb=float(input(""))

dab=sqrt((xb-xa)**2)+sqrt((yb-ya)**2)

print(round(dab,3))
-- OUTPUT:
43.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:44:39) 
-- CODE:
from math import*
xa=float(input(""))
xb=float(input(""))
ya=float(input(""))
yb=float(input(""))

dab=sqrt((xb-xa)**2)+sqrt((yb-ya)**2)

print(round(dab,3))
-- EXECUTION TIME:
0.107417
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
30.48
---- user output:
43.0
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
2.773
---- user output:
3.7
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
3.14
---- user output:
2.22
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:33:52) 
-- CODE:
from math import*
xa=float(input(""))
xb=float(input(""))
ya=float(input(""))
yb=float(input(""))

dab=sqrt((xb-xa)**2)+sqrt((yb-ya)**2)

print(round(dab,3))
-- OUTPUT:
43.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:34:12) 
-- CODE:
from math import*
xa=float(input(""))
xb=float(input(""))
ya=float(input(""))
yb=float(input(""))

dab=float(sqrt((xb-xa)**2)+sqrt((yb-ya)**2))

print(round(dab,3))
-- OUTPUT:
43.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:35:29) 
-- CODE:
from math import*
xa=float(input(""))
xb=float(input(""))
ya=float(input(""))
yb=float(input(""))

dab=float(sqrt((xb-xa)**2)+(yb-ya)**2)

print(round(dab,3))
-- OUTPUT:
349.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:35:40) 
-- CODE:
from math import*
xa=float(input(""))
xb=float(input(""))
ya=float(input(""))
yb=float(input(""))

dab=float(sqrt((xb-xa)**2)+(yb-ya)**2)

print(round(dab))
-- OUTPUT:
349
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:35:44) 
-- CODE:
from math import*
xa=float(input(""))
xb=float(input(""))
ya=float(input(""))
yb=float(input(""))

dab=float(sqrt((xb-xa)**2)+(yb-ya)**2)

print(round(dab))
-- OUTPUT:
349
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:35:52) 
-- CODE:
from math import*
xa=float(input(""))
xb=float(input(""))
ya=float(input(""))
yb=float(input(""))

dab=float(sqrt((xb-xa)**2)+(yb-ya)**2)

print(dab)
-- OUTPUT:
349.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:37:31) 
-- CODE:
from math import*
xa=float(input(""))
xb=float(input(""))
ya=float(input(""))
yb=float(input(""))

dab=sqrt((xb-xa)**2+(yb-ya)**2)

print(dab)
-- OUTPUT:
30.805843601498726
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:37:46) 
-- CODE:
from math import*
xa=float(input(""))
xb=float(input(""))
ya=float(input(""))
yb=float(input(""))

dab=sqrt((xb-xa)**2+sqrt((yb-ya)**2))

print(dab)
-- OUTPUT:
25.357444666211933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:38:21) 
-- CODE:
from math import*
xa=float(input(""))
xb=float(input(""))
ya=float(input(""))
yb=float(input(""))

dab=sqrt((xb-xa)**2)+sqrt((yb-ya)**2)

print(round(dab,3))
-- OUTPUT:
43.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:38:44) 
-- CODE:
from math import*
xa=float(input(""))
xb=float(input(""))
ya=float(input(""))
yb=float(input(""))

dab= sqrt((xb-xa)**2) + sqrt((yb-ya)**2)

print(round(dab,3))
-- OUTPUT:
43.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:38:51) 
-- CODE:
from math import*
xa=float(input(""))
xb=float(input(""))
ya=float(input(""))
yb=float(input(""))

dab= sqrt((xb-xa)**2) + sqrt((yb-ya)**2)

print(round(dab,3))
-- OUTPUT:
43.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:39:09) 
-- CODE:
from math import*
xa=float(input(""))
xb=float(input(""))
ya=float(input(""))
yb=float(input(""))

dab= sqrt((xb-xa)**2 + (yb-ya)**2)

print(round(dab,3))
-- OUTPUT:
30.806
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:39:27) 
-- CODE:
from math import*
xa=float(input(""))
xb=float(input(""))
ya=float(input(""))
yb=float(input(""))

dab= float(sqrt((xb-xa)**2 + (yb-ya)**2))

print(round(dab,3))
-- OUTPUT:
30.806
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:39:45) 
-- CODE:
from math import*
xa=float(input(""))
xb=float(input(""))
ya=float(input(""))
yb=float(input(""))

dab= float(sqrt((xb-xa)**2 + sqrt((yb-ya)**2)))

print(round(dab,3))
-- OUTPUT:
25.357
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:40:08) 
-- CODE:
from math import*
xa=float(input(""))
xb=float(input(""))
ya=float(input(""))
yb=float(input(""))

dab = float(sqrt((xb-xa)**2) + sqrt((yb-ya)**2)))

print(round(dab,3))
-- ERROR:
File "XXXX", line 7
    dab = float(sqrt((xb-xa)**2) + sqrt((yb-ya)**2)))
                                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:40:09) 
-- CODE:
from math import*
xa=float(input(""))
xb=float(input(""))
ya=float(input(""))
yb=float(input(""))

dab = float(sqrt((xb-xa)**2) + sqrt((yb-ya)**2)))

print(round(dab,3))
-- ERROR:
File "XXXX", line 7
    dab = float(sqrt((xb-xa)**2) + sqrt((yb-ya)**2)))
                                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:40:25) 
-- CODE:
from math import*
xa=float(input(""))
xb=float(input(""))
ya=float(input(""))
yb=float(input(""))

dab = float(sqrt((xb-xa)**2) + sqrt((yb-ya)**2))

print(round(dab,3))
-- OUTPUT:
43.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:41:27) 
-- CODE:
from math import*
xa=float(input(""))
xb=float(input(""))
ya=float(input(""))
yb=float(input(""))

dab = float(sqrt(xa-xb)**2+sqrt(ya-yb)**2)
print(round(dab,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    dab = float(sqrt(xa-xb)**2+sqrt(ya-yb)**2)
ValueError: math domain error
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:42:01) 
-- CODE:
from math import*
xa=float(input(""))
xb=float(input(""))
ya=float(input(""))
yb=float(input(""))

dab = float(sqrt(xa-xb)**2+sqrt(ya-yb)**2)
print(round(dab,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    dab = float(sqrt(xa-xb)**2+sqrt(ya-yb)**2)
ValueError: math domain error
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:42:17) 
-- CODE:
from math import*
xa=float(input(""))
xb=float(input(""))
ya=float(input(""))
yb=float(input(""))

dab = sqrt(xa-xb)**2+sqrt(ya-yb)**2
print(round(dab,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    dab = sqrt(xa-xb)**2+sqrt(ya-yb)**2
ValueError: math domain error
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:42:56) 
-- CODE:
from math import*
xa=float(input(""))
xb=float(input(""))
ya=float(input(""))
yb=float(input(""))

dab = float(sqrt(xa-xb**2)+sqrt(ya-yb**2))
print(round(dab,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    dab = float(sqrt(xa-xb**2)+sqrt(ya-yb**2))
ValueError: math domain error
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:43:20) 
-- CODE:
from math import*
xa=float(input(""))
xb=float(input(""))
ya=float(input(""))
yb=float(input(""))

dab = float(sqrt(xa-xb**2+(ya-yb**2))
print(round(dab,3))
-- ERROR:
File "XXXX", line 8
    print(round(dab,3))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:43:28) 
-- CODE:
from math import*
xa=float(input(""))
xb=float(input(""))
ya=float(input(""))
yb=float(input(""))

dab = float(sqrt(xa-xb**2+(ya-yb**2)))
print(round(dab,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    dab = float(sqrt(xa-xb**2+(ya-yb**2)))
ValueError: math domain error
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:43:59) 
-- CODE:
from math import*
xa=float(input(""))
xb=float(input(""))
ya=float(input(""))
yb=float(input(""))

dab = float(sqrt((xa-xb)**2+(ya-yb)**2))
print(round(dab,3))
-- OUTPUT:
30.806
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:45:03) 
-- CODE:
from math import*
xa=float(input(""))
xb=float(input(""))
ya=float(input(""))
yb=float(input(""))

dab = float(sqrt((xa-xb)**2)+sqrt((ya-yb)**2 ))
print(round(dab,3))
-- OUTPUT:
43.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 00:45:37) 
-- CODE:
from math import*
xa=float(input(""))
xb=float(input(""))
ya=float(input(""))
yb=float(input(""))

dab = float(sqrt((xa-xb)**2)+sqrt((ya-yb)**2 ))

print(round(dab,3))
-- EXECUTION TIME:
0.201179
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
30.48
---- user output:
43.0
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
2.773
---- user output:
3.7
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
3.14
---- user output:
2.22
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:46:15) 
-- CODE:

xa=float(input(""))
xb=float(input(""))
ya=float(input(""))
yb=float(input(""))

dab = float(sqrt((xa-xb)**2)+sqrt((ya-yb)**2 ))

print(round(dab,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    dab = float(sqrt((xa-xb)**2)+sqrt((ya-yb)**2 ))
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:46:51) 
-- CODE:
from math import*
xa=float(input(""))
xb=float(input(""))
ya=float(input(""))
yb=float(input(""))

DAB = float(sqrt((xa-xb)**2)+sqrt((ya-yb)**2 ))

print(round(DAB,3))
-- OUTPUT:
43.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:48:51) 
-- CODE:
from math import*
xa=float(input(""))
xb=float(input(""))
ya=float(input(""))
yb=float(input(""))

DAB = float(sqrt((xa-xb)**2+sqrt(ya-yb)**2 ))


print(round(DAB,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    DAB = float(sqrt((xa-xb)**2+sqrt(ya-yb)**2 ))
ValueError: math domain error
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 00:48:52) 
-- CODE:
from math import*
xa=float(input(""))
xb=float(input(""))
ya=float(input(""))
yb=float(input(""))

DAB = float(sqrt((xa-xb)**2+sqrt(ya-yb)**2 ))


print(round(DAB,3))
-- EXECUTION TIME:
0.13663
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/1804/main.py", line 7, in <module>
    DAB = float(sqrt((xa-xb)**2+sqrt(ya-yb)**2 ))
ValueError: math domain error

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:48:58) 
-- CODE:
from math import*
xa=float(input(""))
xb=float(input(""))
ya=float(input(""))
yb=float(input(""))

DAB = float(sqrt((xa-xb)**2+sqrt(ya-yb)**2 ))


print(round(DAB,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    DAB = float(sqrt((xa-xb)**2+sqrt(ya-yb)**2 ))
ValueError: math domain error
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:49:13) 
-- CODE:
from math import*
xa=float(input(""))
xb=float(input(""))
ya=float(input(""))
yb=float(input(""))

DAB = float(sqrt((xa-xb)**2+(ya-yb)**2 ))


print(round(DAB,3))
-- OUTPUT:
30.806
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 00:49:17) 
-- CODE:
from math import*
xa=float(input(""))
xb=float(input(""))
ya=float(input(""))
yb=float(input(""))

DAB = float(sqrt((xa-xb)**2+(ya-yb)**2 ))


print(round(DAB,3))
-- EXECUTION TIME:
0.153339
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
30.48
---- user output:
30.806
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
2.773
---- user output:
3.239
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
3.14
---- user output:
1.57
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:50:10) 
-- CODE:
from math import*
XA=float(input(""))
XB=float(input(""))
YA=float(input(""))
YB=float(input(""))

DAB = float(sqrt((XA-XB)**2+(YA-YB)**2 ))


print(round(DAB,3))
-- OUTPUT:
30.806
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 00:50:15) 
-- CODE:
from math import*
XA=float(input(""))
XB=float(input(""))
YA=float(input(""))
YB=float(input(""))

DAB = float(sqrt((XA-XB)**2+(YA-YB)**2 ))


print(round(DAB,3))
-- EXECUTION TIME:
0.192635
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
30.48
---- user output:
30.806
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
2.773
---- user output:
3.239
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
3.14
---- user output:
1.57
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:51:23) 
-- CODE:
from math import*

XA=float(input(""))
XB=float(input(""))
YA=float(input(""))
YB=float(input(""))

DAB = sqrt((XA-XB)**2+(YA-YB)**2 )


print(round(DAB,3))
-- OUTPUT:
30.806
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:54:16) 
-- CODE:
from math import*

XA=float(input(""))
XB=float(input(""))
YA=float(input(""))
YB=float(input(""))

DAB = sqrt((XA-YA)**2+(XB-YB)**2 )


print(round(DAB,3))
-- OUTPUT:
30.48
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 00:54:23) 
-- CODE:
from math import*

XA=float(input(""))
XB=float(input(""))
YA=float(input(""))
YB=float(input(""))

DAB = sqrt((XA-YA)**2+(XB-YB)**2 )


print(round(DAB,3))
-- EXECUTION TIME:
0.131975
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
30.48
---- user output:
30.48
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
2.773
---- user output:
2.773
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
3.14
---- user output:
3.14
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
